fix(wizard): allow long wizard title to wrap

--- a/src/patternfly/components/Wizard/wizard.scss
+++ b/src/patternfly/components/Wizard/wizard.scss
@@ -226,6 +226,7 @@
 
 .pf-c-wizard__title {
   padding-right: var(--pf-c-wizard__title--PaddingRight);
+  word-wrap: break-word;
 }
 
 .pf-c-wizard__description {
